test/files/invalid/order_include_namespace.fbs
namespace Foo;
include "/dev/null";