test/files/invalid/order_include_namespace.stderr
[0m[1m[38;5;9merror[0m[1m: Cannot have includes after the namespace has been set[0m
  [0m[34m┌─[0m test/files/invalid/order_include_namespace.fbs:1:1
  [0m[34m│[0m
[0m[34m1[0m [0m[34m│[0m namespace Foo;
  [0m[34m│[0m [0m[34m--------------[0m [0m[34mnamespace was here[0m
[0m[34m2[0m [0m[34m│[0m include "/dev/null";
  [0m[34m│[0m [0m[34m--------------------[0m [0m[34minclude was here[0m

Error: Bailing because of errors
